--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BrewNotes</string>
     <string name="title_activity_coffee_bag">CoffeeBagActivity</string>
     <string name="title_activity_coffee_bag_detail">CoffeeBagDetailActivity</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
 </resources>
