--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_coffee_bag">CoffeeBagActivity</string>
     <string name="title_activity_coffee_bag_detail">CoffeeBagDetailActivity</string>
     <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_activity_check_in_detail">CheckInDetailActivity</string>
 </resources>
